# server_operator

./: .gitignore  README.md  pyproject.toml  run.py
docs/: v2_architecture.md
operatorapp/: __init__.py  app.py  archive_executor.py  cli.py  codex_executor.py  config.py  download_executor.py  events.py  executor_registry.py  executor_types.py  file_io_executor.py  filesystem_executor.py  git_executor.py  llm_types.py  logging_utils.py  openai_client.py  planner.py  planner_models.py  prompts.py  scheduler.py  schemas.py  shell_executor.py  storage.py  task_payloads.py  version.py  wait_executor.py
tests/: test_app.py  test_archive_executor.py  test_cli.py  test_codex_executor.py  test_config.py  test_download_executor.py  test_e2e_operator.py  test_events.py  test_executor_registry.py  test_file_io_executor.py  test_filesystem_executor.py  test_git_executor.py  test_logging_utils.py  test_openai_client.py  test_planner.py  test_planner_models.py  test_prompts.py  test_scheduler.py  test_schemas.py  test_shell_executor.py  test_smoke.py  test_storage.py  test_wait_executor.py
