[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "operatorapp"
version = "0.1.0"
description = "Sequential local server agent CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
operator = "operatorapp.cli:main"

[tool.setuptools.packages.find]
include = ["operatorapp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
